Changed method types in EncryptionController